chore(build): migrar Java 21 → 25 (LTS) y modernizar APIs
- Actualiza <java.version>, <source> y <target> a 25 en pom.xml
- Fuerza Lombok 1.18.44 con annotationProcessorPaths para compatibilidad con Java 25
- Reemplaza StringBuilder hex loop por HexFormat.of().formatHex() en TokenUtils
- Reemplaza new Date(System.currentTimeMillis()) por Date.from(Instant.now()) en JwtUtils
- Reemplaza Collections.singletonList por List.of en GoogleAuthService
- Elimina @Autowired redundante en constructor de GoogleAuthService

Ref: VC-88

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>